@@ -8,7 +8,6 @@ import hudson.remoting.RemoteClassLoader.ResourceFile;
 
 import java.io.IOException;
 import java.net.URL;
-import java.util.Collections;
 import java.util.Map;
 
 /**
@@ -59,7 +58,7 @@ class DumbClassLoaderBridge implements IClassLoader {
     @Override
     public Map<String,ClassFile2> fetch3(String className) throws ClassNotFoundException {
         ClassFile cf = fetch2(className);
-        return Collections.singletonMap(className,
+        return Map.of(className,
                 new ClassFile2(cf.classLoader,new ResourceImageDirect(cf.classImage),null,null,null));
     }
 
